# grovedb

./: .codecov.yml  .gitignore  .gitmodules  .pre-commit-config.yaml  .rustfmt.toml  CHANGELOG.md  CLAUDE.md  CODEOWNERS  Cargo.toml  LICENSE.md  README.md  _typos.toml  package-lock.json  package.json
costs/: Cargo.toml
costs/src/: context.rs  error.rs  lib.rs
costs/src/storage_cost/: key_value_cost.rs  mod.rs  removal.rs  transition.rs
costs/tests/: coverage_regression.rs
grovedb/: Cargo.toml  build.rs
grovedb-bulk-append-tree/: Cargo.toml
grovedb-bulk-append-tree/src/: chunk.rs  epoch.rs  error.rs  lib.rs  proof.rs  storage_adapter.rs  store.rs  test_utils.rs
grovedb-bulk-append-tree/src/proof/: mod.rs  tests.rs
grovedb-bulk-append-tree/src/tree/: append.rs  fetch.rs  hash.rs  keys.rs  mmr_adapter.rs  mod.rs  query.rs  tests.rs
grovedb-commitment-tree/: Cargo.toml
grovedb-commitment-tree/benches/: verification.rs
grovedb-commitment-tree/src/: client.rs  error.rs  kv_store.rs  lib.rs  serialization.rs  sqlite_client.rs  sqlite_store.rs  storage.rs  storage_adapter.rs  test_utils.rs
grovedb-commitment-tree/src/client/: client_memory_commitment_tree.rs  client_persistent_commitment_tree.rs  mod.rs  sqlite_client_tests.rs  sqlite_store.rs  sqlite_store_tests.rs  tests.rs
grovedb-commitment-tree/src/commitment_frontier/: mod.rs  tests.rs
grovedb-commitment-tree/src/commitment_tree/: mod.rs  tests.rs
grovedb-dense-fixed-sized-merkle-tree/: Cargo.toml
grovedb-dense-fixed-sized-merkle-tree/src/: error.rs  hash.rs  lib.rs  proof.rs  storage_adapter.rs  store.rs  test_utils.rs  tests.rs  tree.rs  verify.rs
grovedb-dense-fixed-sized-merkle-tree/src/proof/: mod.rs  tests.rs
grovedb-element/: Cargo.toml
grovedb-element/src/: element_type.rs  error.rs  lib.rs  visualize_helpers.rs
grovedb-element/src/element/: constructor.rs  helpers.rs  mod.rs  serialize.rs  visualize.rs
grovedb-element/src/reference_path/: mod.rs  util.rs  visualize.rs
grovedb-element/tests/: element_constructors_helpers.rs  element_display_and_serialization.rs  reference_path_edge_cases.rs
grovedb-epoch-based-storage-flags/: Cargo.toml
grovedb-epoch-based-storage-flags/src/: error.rs  lib.rs  split_removal_bytes.rs  update_element_flags.rs
grovedb-merkle-mountain-range/: Cargo.toml  LICENSE  Makefile  README.md
grovedb-merkle-mountain-range/benches/: helper_benchmark.rs  mmr_benchmark.rs
grovedb-merkle-mountain-range/src/: error.rs  helper.rs  lib.rs  mem_store.rs  mmr.rs  mmr_store.rs  node.rs  proof.rs  storage_adapter.rs
grovedb-merkle-mountain-range/src/tests/: mod.rs  test_coverage.rs  test_helper.rs  test_incremental.rs  test_mmr.rs  test_storage_adapter.rs
grovedb-mmr/: Cargo.toml
grovedb-mmr/src/: dense_merkle.rs  grove_mmr.rs  lib.rs  node.rs  proof.rs  util.rs
grovedb-query/: Cargo.toml
grovedb-query/src/: common_path.rs  error.rs  insert.rs  lib.rs  map.rs  merge.rs  proof_items.rs  proof_status.rs  query.rs  subquery_branch.rs  verify.rs
grovedb-query/src/aggregate_sum_query/: insert.rs  merge.rs  mod.rs
grovedb-query/src/proofs/: encoding.rs  mod.rs  tree_feature_type.rs
grovedb-query/src/query_item/: intersect.rs  merge.rs  mod.rs
grovedb-query/tests/: aggregate_sum_query_tests.rs  display_and_helpers_coverage.rs  merge_coverage.rs  query_api_and_serialization.rs  query_terminal_and_merge.rs  tree_feature_type_coverage.rs  utilities_and_proof_items.rs
grovedb-version/: Cargo.toml
grovedb-version/src/: error.rs  lib.rs  tests.rs
grovedb-version/src/version/: grovedb_versions.rs  merk_versions.rs  mod.rs  v1.rs  v2.rs  v3.rs
grovedb/benches/: batch_benchmark.rs  branch_chunk_queries.rs  insertion_benchmark.rs  proof_generation_benchmark.rs
grovedb/src/: batch.rs  bidirectional_references.rs  checkpoints.rs  chunks.rs  costs.rs  debugger.rs  error.rs  lib.rs  merk_cache.rs  operations.rs  query.rs  query_result_type.rs  reference_path.rs  replication.rs  subtree.rs  subtrees.rs  tests.rs  transaction.rs  util.rs  versioning.rs  visualize.rs  worst_case_costs.rs
grovedb/src/batch/: apply.rs  average_case_cost_tests.rs  average_case_costs.rs  batch_structure.rs  cost_tests.rs  estimated_costs.rs  just_in_time_cost_tests.rs  just_in_time_reference_update.rs  key_info.rs  mod.rs  mode.rs  multi_insert_cost_tests.rs  options.rs  single_deletion_cost_tests.rs  single_insert_cost_tests.rs  single_sum_item_deletion_cost_tests.rs  single_sum_item_insert_cost_tests.rs  subtrees.rs  tests.rs  worst_case_cost_tests.rs  worst_case_costs.rs
grovedb/src/bidirectional_references/: compat_handling.rs  handling.rs  handling_common.rs
grovedb/src/element/: aggregate_sum_query.rs  constructor.rs  delete.rs  elements_iterator.rs  exists.rs  get.rs  helpers.rs  insert.rs  mod.rs  path_query_push_args.rs  query.rs  query_options.rs  serialize.rs
grovedb/src/estimated_costs/: average_case_costs.rs  mod.rs  worst_case_costs.rs
grovedb/src/operations/: aux.rs  auxiliary.rs  bulk_append_tree.rs  commitment_tree.rs  delete.rs  dense_tree.rs  get.rs  insert.rs  is_empty_tree.rs  mmr_tree.rs  mod.rs  proof.rs
grovedb/src/query/: aggregate_sum_path_query.rs  grove_branch_query_result.rs  grove_trunk_query_result.rs  mod.rs  (+2 more)
grovedb/tests/: secondary_tests.rs
grovedbg-types/: Cargo.toml
grovedbg-types/src/: lib.rs
merk/: Cargo.toml  README.md
merk/benches/: branch_queries.rs  merk.rs  ops.rs
merk/docs/: algorithms.md
merk/src/: debugger.rs  error.rs  lib.rs  owner.rs  tree_type.rs  visualize.rs  worst_case_costs.rs
node-grove/: Cargo.toml  README.md  index.js  index.spec.js  package-lock.json  package.json
node-grove/docker/: build-aarch64-unknown-linux-musl.sh
node-grove/src/: converter.rs  lib.rs
storage/: Cargo.toml
storage/src/: error.rs  lib.rs  rocksdb_storage.rs  secondary_rocksdb_storage.rs  storage.rs  worst_case_costs.rs
storage2/: Cargo.toml
storage2/src/: lib.rs  rocksdb_storage.rs  storage.rs
tutorials/: Cargo.toml  README.md
tutorials/src/: main.rs
visualize/: Cargo.toml
visualize/src/: lib.rs
(+670 files in other folders)
