[workspace]
resolver = "2"
exclude = ["grovedb/grovedbg"]
members = [
    "costs",
    "grovedb",
    "merk",
    "node-grove",
    "storage",
    "visualize",
    "path",
    "grovedbg-types",
    "grovedb-version",
    "grovedb-epoch-based-storage-flags",
    "grovedb-element",
    "grovedb-merkle-mountain-range",
    "grovedb-dense-fixed-sized-merkle-tree",
]
