[workspace]
resolver = "2"
exclude = ["grovedb/grovedbg"]
members = [
    "costs",
    "grovedb",
    "merk",
    "storage",
    "visualize",
    "path",
    "grovedbg-types",
    "grovedb-version",
    "grovedb-epoch-based-storage-flags",
    "grovedb-element",
    "grovedb-commitment-tree",
    "grovedb-merkle-mountain-range",
    "grovedb-bulk-append-tree",
    "grovedb-dense-fixed-sized-merkle-tree",
    "grovedb-bulk-append-tree",
    "grovedb-commitment-tree",
    "grovedb-query",
]

[workspace.dependencies]
rand = "0.10"
thiserror = "2.0.17"
hex = "0.4.3"
integer-encoding = "4.1.0"
blake3 = "1.8.1"
bincode = "=2.0.1"
bincode_derive = "=2.0.1"
indexmap = "2.7.0"
serde = { version = "1.0.228", features = ["derive"] }
byteorder = "1.5.0"
intmap = "3.1.3"
tempfile = "3.23.0"
assert_matches = "1.5.0"
