[workspace]
resolver = "2"
exclude = ["grovedb/grovedbg"]
members = [
    "costs",
    "grovedb",
    "merk",
    "storage",
    "visualize",
    "path",
    "grovedbg-types",
    "grovedb-version",
    "grovedb-epoch-based-storage-flags",
    "grovedb-element",
    "grovedb-commitment-tree",
    "grovedb-merkle-mountain-range",
    "grovedb-bulk-append-tree",
    "grovedb-dense-fixed-sized-merkle-tree",
    "grovedb-bulk-append-tree",
    "grovedb-commitment-tree",
    "grovedb-query",
]

[workspace.dependencies]
rand = "0.10"
thiserror = "2.0"
hex = "0.4.3"
integer-encoding = "4.1.0"
blake3 = "1.8"
bincode = "=2.0.1"
bincode_derive = "=2.0.1"
indexmap = "2.13.0"
serde = { version = "1.0", features = ["derive"] }
byteorder = "1.5.0"
intmap = "3.1.3"
tempfile = "3.26.0"
assert_matches = "1.5.0"
criterion = "0.8.2"
tokio = "1.50.0"
itertools = "0.14.0"
ed = "0.2.2"
num_cpus = "1.17.0"
axum = { version = "0.8", features = ["macros"] }
tokio-util = "0.7.17"
tower-http = { version = "0.6.8", features = ["fs"] }
