[package]
name = "grovedb-costs"
version = "2.2.0"
edition = "2021"
license = "MIT"
description = "Costs extension crate for GroveDB"
homepage = "https://www.grovedb.org/"
documentation = "https://docs.rs/grovedb-costs"
repository = "https://github.com/dashpay/grovedb"


[dependencies]
thiserror = "2.0.11"
intmap = "3.0.1"
integer-encoding = "4.0.0"
