[package]
name = "grovedb-costs"
version = "4.0.0"
edition = "2024"
license = "MIT"
description = "Costs extension crate for GroveDB"
homepage = "https://www.grovedb.org/"
documentation = "https://docs.rs/grovedb-costs"
repository = "https://github.com/dashpay/grovedb"


[dependencies]
thiserror = { workspace = true }
intmap = { workspace = true }
integer-encoding = { workspace = true }
