[package]
name = "grovedb-bulk-append-tree"
version = "4.0.0"
authors = ["Samuel Westrich <sam@dash.org>"]
edition = "2021"
license = "MIT"
description = "BulkAppendTree: two-level authenticated append-only structure for GroveDB"
homepage = "https://www.grovedb.org"
repository = "https://github.com/dashpay/grovedb"
readme = "../README.md"
documentation = "https://docs.rs/grovedb"

[dependencies]
grovedb-merkle-mountain-range = { version = "4.0.0", path = "../grovedb-merkle-mountain-range" }
blake3 = "1.8.1"
bincode = { version = "2.0.1", features = ["derive"] }
hex = "0.4"
thiserror = "2.0"
grovedb-storage = { version = "4.0.0", path = "../storage", optional = true }
grovedb-costs = { version = "4.0.0", path = "../costs", optional = true }

[features]
storage = ["grovedb-storage", "grovedb-costs"]
