[package]
name = "grovedb-bulk-append-tree"
version = "4.0.0"
authors = ["Samuel Westrich <sam@dash.org>"]
edition = "2024"
license = "MIT"
description = "BulkAppendTree: two-level authenticated append-only structure for GroveDB"
homepage = "https://www.grovedb.org"
repository = "https://github.com/dashpay/grovedb"
readme = "../README.md"
documentation = "https://docs.rs/grovedb"

[features]
default = ["storage"]
storage = [
    "grovedb-storage",
    "grovedb-merkle-mountain-range/storage",
    "grovedb-dense-fixed-sized-merkle-tree/storage",
]
mem_store = ["grovedb-merkle-mountain-range/mem_store"]

[dependencies]
grovedb-merkle-mountain-range = { version = "4.0.0", path = "../grovedb-merkle-mountain-range", default-features = false }
grovedb-dense-fixed-sized-merkle-tree = { version = "4.0.0", path = "../grovedb-dense-fixed-sized-merkle-tree", default-features = false }
grovedb-query = { version = "4.0.0", path = "../grovedb-query" }
grovedb-costs = { version = "4.0.0", path = "../costs" }
grovedb-storage = { version = "4.0.0", path = "../storage", optional = true }
blake3 = { workspace = true }
bincode = { workspace = true, features = ["derive"] }
hex = { workspace = true }
thiserror = { workspace = true }
