[package]
name = "grovedb-commitment-tree"
description = "Orchard-style commitment tree integration for GroveDB"
version = "4.0.0"
authors = ["Samuel Westrich <sam@dash.org>"]
edition = "2021"
license = "MIT"
homepage = "https://www.grovedb.org"
repository = "https://github.com/dashpay/grovedb"
readme = "../README.md"
documentation = "https://docs.rs/grovedb"

[features]
default = []
server = []
client = ["shardtree"]

[dependencies]
orchard = { path = "../../orchard", features = ["circuit"] }
incrementalmerkletree = "0.8"
shardtree = { version = "0.6", optional = true }
thiserror = "2.0"
zcash_note_encryption = { path = "../../zcash_note_encryption" }
