[package]
name = "grovedb-commitment-tree"
description = "Orchard-style commitment tree integration for GroveDB"
version = "4.0.0"
authors = ["Samuel Westrich <sam@dash.org>"]
edition = "2021"
license = "MIT"
homepage = "https://www.grovedb.org"
repository = "https://github.com/dashpay/grovedb"
readme = "../README.md"
documentation = "https://docs.rs/grovedb"

[features]
default = []
server = []
client = ["shardtree"]

[dependencies]
orchard = { git = "https://github.com/dashpay/orchard.git", rev = "b09c84a8f85aaa475134c9624eba7d6996fade7e", features = ["circuit"] }
incrementalmerkletree = "0.8"
shardtree = { version = "0.6", optional = true }
thiserror = "2.0"
zcash_note_encryption = { git = "https://github.com/dashpay/zcash_note_encryption.git", rev = "9f7e93d42cef839d02b9d75918117941d453f8cb" }
