[package]
name = "grovedb-dense-fixed-sized-merkle-tree"
version = "4.0.0"
authors = ["Samuel Westrich <sam@dash.org>"]
edition = "2024"
license = "MIT"
description = "Dense (fixed-size, power-of-2) Merkle tree root computation using Blake3"
homepage = "https://www.grovedb.org"
repository = "https://github.com/dashpay/grovedb"

[features]
default = ["storage"]
storage = ["grovedb-storage"]

[dependencies]
blake3 = { workspace = true }
bincode = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
grovedb-costs = { version = "4.0.0", path = "../costs" }
grovedb-query = { version = "4.0.0", path = "../grovedb-query" }
grovedb-storage = { version = "4.0.0", path = "../storage", optional = true }
