[package]
name = "grovedb-element"
description = "The storage element crate for grovedb"
version = "4.0.0"
authors = ["Samuel Westrich <sam@dash.org>"]
edition = "2024"
license = "MIT"
homepage = "https://www.grovedb.org"
repository = "https://github.com/dashpay/grovedb"
readme = "../README.md"
documentation = "https://docs.rs/grovedb"

[dependencies]
bincode = { workspace = true }
bincode_derive = { workspace = true }
serde = { workspace = true, optional = true }
hex = { workspace = true }
integer-encoding = { workspace = true }
thiserror = { workspace = true }
grovedb-version = { version = "4.0.0", path = "../grovedb-version" }
grovedb-visualize = { version = "4.0.0", path = "../visualize", optional = true }
grovedb-path = { version = "4.0.0", path = "../path" }

[features]
default = ["verify", "constructor"]
verify = []
constructor = []
serde = ["dep:serde"]
visualize = ["dep:grovedb-visualize"]
