[package]
name = "grovedb-epoch-based-storage-flags"
authors = ["Samuel Westrich <sam@dash.org>"]
description = "Epoch based storage flags for GroveDB"
version = "2.0.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/dashpay/grovedb"

[dependencies]
thiserror = { version = "1.0.63" }
grovedb-costs = { version = "2.0.0", path = "../costs" }
intmap = { version = "2.0.0", features = ["serde"]}
integer-encoding = { version = "4.0.0" }
hex = { version = "0.4.3" }