[package]
name = "grovedb-merkle-mountain-range"
version = "4.0.0"
authors = [
    "Samuel Westrich <sam@dash.org>",
    "Nervos Core Dev <dev@nervos.org>",
]
edition = "2024"
license = "MIT"
description = "A generalized merkle mountain range implementation for GroveDB"
repository = "https://github.com/dashpay/grovedb"
homepage = "https://www.grovedb.org"
documentation = "https://docs.rs/grovedb"

[features]
storage = ["grovedb-storage"]
mem_store = []

[dependencies]
blake3 = "1.8.1"
bincode = { version = "2.0.1", features = ["derive"] }
grovedb-costs = { version = "4.0.0", path = "../costs" }
grovedb-storage = { version = "4.0.0", path = "../storage", optional = true }

[dev-dependencies]
faster-hex = "0.10.0"
criterion = "0.8.2"
rand = "0.8.5"
proptest = "1.10.0"
lazy_static = "1.5.0"

[[bench]]
name = "mmr_benchmark"
harness = false
required-features = ["mem_store"]

[[bench]]
name = "helper_benchmark"
harness = false
