[package]
name = "grovedb-query"
version = "4.0.0"
edition = "2024"
license = "MIT"
description = "Query primitives for GroveDB"
homepage = "https://www.grovedb.org/"
documentation = "https://docs.rs/grovedb-query"
repository = "https://github.com/dashpay/grovedb"

[dependencies]
bincode = { workspace = true }
hex = { workspace = true }
indexmap = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, optional = true }
ed = { workspace = true }
byteorder = { workspace = true }
integer-encoding = { workspace = true }

# Feature-gated deps for merk integration
grovedb-costs = { version = "4.0.0", path = "../costs", optional = true }
grovedb-storage = { version = "4.0.0", path = "../storage", optional = true }



[dev-dependencies]
assert_matches = { workspace = true }

[features]
default = []
blockchain = ["grovedb-costs", "grovedb-storage"]
serde = ["dep:serde", "indexmap/serde"]
