[package]
name = "grovedb-version"
authors = ["Samuel Westrich <sam@dash.org>"]
description = "Versioning library for Platform"
version = "2.2.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/dashpay/grovedb"

[dependencies]
thiserror = "2.0.11"
versioned-feature-core = "1.0.0"

[features]
mock-versions = []
