[package]
name = "grovedbg-types"
version = "4.0.0"
edition = "2024"
description = "Common type definitions for data exchange over GroveDBG protocol"
authors = ["Evgeny Fomin <evgeny.fomin@dash.org>"]
license = "MIT"
repository = "https://github.com/dashpay/grovedb"

[dependencies]
serde = { workspace = true }
serde_with = { version = "3.9.0", features = ["base64"] }
