[package]
name = "grovedb-merk"
description = "Merkle key/value store adapted for GroveDB"
version = "4.0.0"
authors = [
        "Samuel Westrich <sam@dash.org>",
        "Wisdom Ogwu <wisdom@dash.org>",
        "Evgeny Fomin <evgeny.fomin@dash.org>",
        "Matt Bell <mappum@gmail.com>",
]
edition = "2024"
license = "MIT"
homepage = "https://www.grovedb.org"
repository = "https://github.com/dashpay/grovedb"
readme = "README.md"
documentation = "https://docs.rs/grovedb-merk"

[dependencies]
grovedb-costs = { version = "4.0.0", path = "../costs" }
grovedb-path = { version = "4.0.0", path = "../path" }
grovedb-storage = { version = "4.0.0", path = "../storage", optional = true }
grovedb-version = { version = "4.0.0", path = "../grovedb-version" }
grovedb-visualize = { version = "4.0.0", path = "../visualize" }
grovedb-element = { version = "4.0.0", path = "../grovedb-element" }
grovedb-query = { version = "4.0.0", path = "../grovedb-query" }

bincode = { workspace = true }
bincode_derive = { workspace = true }
hex = { workspace = true }
indexmap = { workspace = true }
integer-encoding = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
byteorder = { workspace = true }
blake3 = { workspace = true, optional = true }
ed = { workspace = true, optional = true }
num_cpus = { workspace = true, optional = true }
colored = { version = "3.0.0", optional = true }

[features]
default = ["full"]
proof_debug = []
serde = ["dep:serde", "indexmap/serde"]
minimal = [
        "num_cpus",
        "ed",
        "blake3",
        "grovedb-storage",
        "grovedb-storage/rocksdb_storage",
        "grovedb-element/visualize",
        "grovedb-query/blockchain",
]
full = ["minimal", "test_utils", "colored_debug"]
test_utils = ["rand"]
colored_debug = ["colored"]
verify = ["ed", "blake3"]
grovedbg = ["full"]

[dev-dependencies]
tempfile = { workspace = true }
criterion = { workspace = true }
assert_matches = { workspace = true }

[[bench]]
name = "merk"
harness = false

[[bench]]
name = "ops"
harness = false

[[bench]]
name = "branch_queries"
harness = false
