[package]
name = "node-grove"
version = "0.10.0"
description = "GroveDB node.js bindings"
edition = "2021"
license = "MIT"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

[dependencies]
grovedb = { path = "../grovedb", features = ["full"] }

[dependencies.neon]
version = "0.10.1"
default-features = false
features = ["napi-6", "event-queue-api", "try-catch-api"]
